2004-01-06  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/separating-line-group-engraver.cc (acknowledge_grob):
	set/unset breakableSeparationItem

	* lily/separation-item.cc (relative_width): add function.

	* scm/define-grob-interfaces.scm (only-prebreak-interface): add
	only-prebreak-interface

	* lily/system.cc (output_lines): only junk only-prebreak-interface grobs.

	* lily/multi-measure-rest-engraver.cc (stop_translation_timestep):
	read breakableSeparationItem

	* input/regression/multi-measure-rest-multi-staff-center.ly: new file.

	* lily/system.cc (output_lines): don't suicide Spacing_items. 

	* lily/dot-column.cc (dot_config_badness): new function:
	select the best scoring dot configuration: dots should go close to
	the note heads, but be shifted up or down according to conventions.
	(print_dot_configuration): idem.
	(shift_one): idem
	(remove_collision): idem.

	* input/regression/dots.ly: add  more test cases.

2004-01-06  Han-Wen Nienhuys   <hanwen@cs.uu.nl>

	* lily/include/scm-hash.hh (class Scheme_hash_table): idem.

	* flower/include/interval.hh: rename elem_b to contains 

	* lily/tie.cc: change 'heads to 'head-pair.

	* lily/lyric-phrasing-engraver.cc (process_acknowledged_grobs):
	fill in 'heads field.

	* lily/lyric-extender.cc (brew_molecule): use heads for width, use
	minimum-length for short ones, and shorten so collisions with the
	next syllable are avoided.

	* lily/beam-quanting.cc (score_slopes_dy): add extra points for
	near-zero slopes.
	Only do DAMPING_DIRECTION_PENALTY for non-horizontal dy 

	* lily/dots.cc: remove quantized_position callback. All Y
	positioning is done by dot-column.cc

	* lily/dot-column.cc (do_shifts): rewrite shifting routine: do
	exhaustive test of all dot positions. This fixes disappearing dots
	in dotted chords.

2004-01-05  Han-Wen Nienhuys   <hanwen@cs.uu.nl>

	* mf/feta-klef.mf (test_staff): fatten up G clef
	(test_staff): fatten up f clef.
	

2004-01-05  Jan Nieuwenhuizen  <janneke@gnu.org>
