@@ -1,5 +1,8 @@
 2004-01-06  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/note-collision.cc (check_meshing_chords): if merging heads,
+	then kill the dots too. 
+
 	* lily/separating-line-group-engraver.cc (acknowledge_grob):
 	set/unset breakableSeparationItem
 
